# cuddly-goggles

./: .gitignore  CMakeLists.txt  Common.cmake  LICENSE  README.md  jemalloc.cmake  requirements.txt
datasets/: README.md  download_datasets.sh  dsatur_killer_100.col  dsatur_killer_1000.col  dsatur_killer_15.col  dsatur_killer_25.col  dsatur_killer_250.col  dsatur_killer_50.col  dsatur_killer_500.col  graph100k.col
scripts/: find_graph.sh  graph_visualizer.py  to_dimacs.py  to_web_format.py
src/: CMakeLists.txt
src/common/: bytes_conversion.cpp  bytes_conversion.h  callback_iterator.h  debug.h  dimacs_coloring_io.h  graph.h  random.cpp  random.h
src/generator/: CMakeLists.txt  generator.cpp  generator.h  main.cpp  parameters.h  special.cpp  special.h
src/generator/geometry/: constants.h  intersection.cpp  intersection.h  point.h  segment.h
src/solver/: CMakeLists.txt  clique.h  coloring.h  config.cpp  config.h  graph.h  main.cpp
src/solver/binary/: graph_adaptor.cpp  graph_adaptor.h
src/solver/exact/: DSatur.h  dsatur.cpp  dsatur.h
src/solver/heuristics/: DSatur.h  dsatur.cpp  dsatur.h  selectors.h  vertex_info.h
src/solver/ram_free/: dsatur.cpp  dsatur.h  graph_adaptor.cpp  graph_adaptor.h
src/solver/selectors/: dsatur_dense_selector.h  dsatur_pass_selector.h  dsatur_sewell_selector.h  dsatur_sparse_selector.h  icandidate_selector.h
